update bash syntax